Revise dynamiques.html content and structure

--- a/dynamiques.html
+++ b/dynamiques.html
@@ -14,66 +14,26 @@
       <div class="links">
         <a data-nav href="index.html">Introduction</a>
         <a data-nav href="dynamiques.html">Dynamiques</a>
-        <a data-nav href="questionnaire.html">Questionnaire</a>
+        <a data-nav href="questionnaire-auto.html">Auto</a>
+        <a data-nav href="questionnaire-regard1.html">Regard 1</a>
+        <a data-nav href="questionnaire-regard2.html">Regard 2</a>
+        <a data-nav href="questionnaire-regard3.html">Regard 3</a>
         <a data-nav href="resultats.html">Résultats</a>
       </div>
     </div>
 
     <div class="hero">
-      <h1>Les 5 dynamiques</h1>
-      <p>Ce ne sont pas des cases, mais des forces en mouvement. Chacun a les 5, avec des dominantes et des zones plus faibles selon les contextes.</p>
-    </div>
-
-    <div class="grid two">
-      <div class="card">
-        <h2>Bois</h2>
-        <p>Élan, vision, mise en mouvement, conquête, croissance.</p>
-        <hr>
-        <p><span class="pill">Forces</span> décider d’un cap, lancer, oser, structurer l’ambition.</p>
-        <p><span class="pill">Risques</span> impatience, dispersion, trop “avant” sans stabiliser.</p>
-        <p><span class="pill">Besoin</span> un cadre simple, des étapes, un “métal” fiable.</p>
-      </div>
-      <div class="card">
-        <h2>Feu</h2>
-        <p>Énergie, influence, communication, mobilisation.</p>
-        <hr>
-        <p><span class="pill">Forces</span> embarquer, convaincre, donner envie, décider sous tension.</p>
-        <p><span class="pill">Risques</span> agitation, émotionnel, fatigue, sur-réaction.</p>
-        <p><span class="pill">Besoin</span> calmer, prioriser, retrouver du sens (eau) et de la stabilité (terre).</p>
-      </div>
-      <div class="card">
-        <h2>Terre</h2>
-        <p>Lien, stabilité, cohésion, sécurité, soin du collectif.</p>
-        <hr>
-        <p><span class="pill">Forces</span> créer la confiance, réguler, maintenir l’équilibre humain.</p>
-        <p><span class="pill">Risques</span> évitement du conflit, sur-adaptation, lenteur.</p>
-        <p><span class="pill">Besoin</span> un cap clair (bois) et des décisions assumées (métal).</p>
-      </div>
-      <div class="card">
-        <h2>Métal</h2>
-        <p>Structure, exigence, méthode, qualité, décisions nettes.</p>
-        <hr>
-        <p><span class="pill">Forces</span> clarifier, trancher, fiabiliser, rendre durable.</p>
-        <p><span class="pill">Risques</span> rigidité, dureté, critique, contrôle excessif.</p>
-        <p><span class="pill">Besoin</span> chaleur (feu) et lien (terre) pour garder l’adhésion.</p>
-      </div>
-      <div class="card">
-        <h2>Eau</h2>
-        <p>Profondeur, intuition, recul, sens, observation.</p>
-        <hr>
-        <p><span class="pill">Forces</span> analyser finement, sentir les signaux faibles, donner du sens.</p>
-        <p><span class="pill">Risques</span> rumination, hésitation, retrait, flou.</p>
-        <p><span class="pill">Besoin</span> passage à l’action (bois) et rythme (feu).</p>
+      <h1>Dynamiques.</h1>
+      <p>Page libre pour tes contenus pédagogiques (interprétations, précautions, usages en coaching, etc.).</p>
+      <div class="btnrow">
+        <button class="btn primary" data-go="questionnaire">Faire le questionnaire</button>
+        <a class="btn" href="resultats.html">Résultats</a>
       </div>
     </div>
 
     <div class="card">
-      <h2>À quoi sert cette lecture ?</h2>
-      <p>Elle aide à mieux se comprendre, à reconnaître ses forces naturelles, à voir comment elles s’articulent avec celles des autres, et à clarifier la place que chacun occupe spontanément dans les dynamiques collectives.
-      <br>Quand cette lecture est partagée, les malentendus diminuent, les rôles s’ajustent plus justement, et les décisions deviennent plus fluides parce qu’elles s’appuient sur le réel, pas sur des intentions abstraites.</p>
-      <div class="btnrow">
-        <a class="btn primary" href="questionnaire-auto.html">Passer au questionnaire</a>
-      </div>
+      <h2>À compléter.</h2>
+      <p class="small">Tu peux coller ici tes textes, ou une version “comment lire les écarts auto vs regards”.</p>
     </div>
   </div>
 </body>
