Revise results page content and remove export section
Updated the content and structure of the results page.

--- a/resultats.html
+++ b/resultats.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
-
 <body>
   <div class="container">
     <div class="nav">
@@ -24,30 +23,16 @@
     </div>
 
     <div class="hero">
-      <h1>Résultats</h1>
-      <p>Cette restitution est volontairement synthétique. Elle donne une lecture générique des tendances. L’analyse fine (contexte, nuances, impacts sur les rôles et les décisions) se fait ensuite en échange avec ton mentor préféré Jean-Luc D.</p>
+      <h1>Résultats.</h1>
+      <p>Cette restitution est volontairement synthétique. Elle donne une lecture des tendances, puis la discussion fait le vrai travail.</p>
       <div class="btnrow">
         <a class="btn" href="questionnaire-auto.html">Compléter l’auto-évaluation</a>
-        <a class="btn" href="questionnaire-regard1.html">Inviter un regard</a>
+        <a class="btn" href="questionnaire-regard1.html">Compléter un regard</a>
       </div>
       <div class="footer">Données stockées localement dans ton navigateur. Rien n’est envoyé sur Internet.</div>
     </div>
 
     <div id="results"></div>
-
-    <div class="card">
-      <h2>Export PDF</h2>
-      <p>Pour exporter : ouvre cette page, puis “Imprimer” et choisis “Enregistrer en PDF”. Sur Mac : Cmd+P. Sur iPhone : bouton Partager → Imprimer → pincer pour ouvrir l’aperçu → Partager → Enregistrer dans Fichiers.</p>
-      <div class="btnrow">
-        <button class="btn" onclick="window.print()">Imprimer / PDF</button>
-        <a class="btn" href="resultats-detail.html">Version détaillée (si disponible)</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>Comment me transmettre vos résultats</h2>
-      <p>Si tu veux me les envoyer, utilise le bouton “Copier un résumé” sur la restitution (si présent). Colle le texte dans un email ou un message. Pour un travail plus complet, exporte le PDF.</p>
-    </div>
   </div>
 </body>
 </html>
