--- a/questionnaire-regard2.html
+++ b/questionnaire-regard2.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
+
 <body data-form="regard2">
   <div class="container">
     <div class="nav">
@@ -23,50 +24,53 @@
     </div>
 
     <div class="hero">
-      <h1>Portrait chinois – Regard 2.</h1>
-      <p>Lis chaque phrase et demande-toi : “Est-ce que cela décrit bien sa manière d’agir aujourd’hui ?”.</p>
+      <h1>Portrait chinois – Regard 2</h1>
+      <p>Tu vas évaluer une personne que tu connais bien. Ce questionnaire n’est ni un jugement, ni une note de performance.</p>
+      <p>Lis chaque phrase et demande-toi : <b>“Est-ce que cela décrit bien sa manière d’agir aujourd’hui ?”</b></p>
+      <p>Réponds sans chercher l’équilibre ou l’image idéale. Appuie-toi sur ton expérience réelle de la personne.</p>
 
       <hr>
 
-      <h2>Champs.</h2>
-      <div class="grid two mt">
+      <h2>Champs</h2>
+      <div class="grid two" style="margin-top:10px">
         <div>
-          <label>Portrait chinois de :</label>
-          <input id="subject" class="input" placeholder="Prénom (ou Prénom Nom)" />
+          <label>Portrait chinois de :</label><br>
+          <input id="subject" placeholder="Prénom (ou Prénom Nom)" style="width:100%" />
           <div class="small">Ce nom sera réutilisé dans les questionnaires “regard”.</div>
         </div>
         <div>
-          <label>Évaluation réalisée par :</label>
-          <input id="evaluator" class="input" placeholder="Ton prénom" />
+          <label>Évaluation réalisée par :</label><br>
+          <input id="evaluator" placeholder="Ton prénom" style="width:100%" />
           <div class="small">Ce nom apparaîtra dans la synthèse finale.</div>
         </div>
       </div>
 
-      <div class="grid two mt">
+      <div class="grid two" style="margin-top:14px">
         <div class="kpi">
           <div><b>Progression</b><span id="progressText">0 / 30 points</span></div>
-          <div style="min-width:220px; width:100%"><progress id="progress" value="0" max="30"></progress></div>
+          <div style="min-width:220px"><progress id="progress" value="0" max="30"></progress></div>
         </div>
         <div class="kpi">
-          <div><b>Règle</b><span class="small">Total strict</span></div>
+          <div><b>Règle</b><span>Total strict</span></div>
           <div><b>30</b> / 30</div>
+          <div class="small">Max 5 points par phrase.</div>
         </div>
       </div>
     </div>
 
     <div class="card">
-      <h2>Répartition des points.</h2>
+      <h2>Répartition des points</h2>
       <div class="small">Attribue entre 0 et 5 points à chaque phrase. La somme doit faire exactement 30.</div>
-      <div id="questionnaire" class="mt"></div>
+      <div id="questionnaire"></div>
     </div>
 
     <div class="card">
       <div id="totalWarn" class="warn">Le total doit faire exactement 30.</div>
       <div class="btnrow">
-        <button id="goResults" class="btn primary" disabled>Voir les résultats</button>
+        <a id="goResults" class="btn primary" href="resultats.html">Voir les résultats</a>
         <button id="reset" class="btn danger" type="button">Réinitialiser</button>
       </div>
-      <div class="footer">Conseil : réponds sans chercher l’équilibre ou l’image idéale.</div>
+      <div class="footer">Merci de répondre au plus juste, sur ce que tu observes réellement.</div>
     </div>
   </div>
 </body>
